fix .Contract ClassLibrary issue

--- a/LibraryApplication/LibraryApplication.Api/LibraryApplication.Api.csproj
+++ b/LibraryApplication/LibraryApplication.Api/LibraryApplication.Api.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibraryApplication.Contract\LibraryApplication.Contract.csproj" />
+    <ProjectReference Include="..\LibraryApp.Contract\LibraryApp.Contract.csproj" />
   </ItemGroup>
 
 </Project>
